# BiochemicalAlgorithms.jl

./: .gitignore  .mailmap  CITATION.bib  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Manifest.toml  Project.toml  README.md  atomtype_gff.csv  old_atomtype_amber.csv
.github/: dependabot.yml
benchmark/: .gitignore  AmberFF_bench.jl  FileFormats_bench.jl  FragmentDB_bench.jl  KernelCreation_bench.jl  KernelIteration_bench.jl  Project.toml  benchmarks.jl  run_benchmarks.jl  tables_vs_dataframes.md
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Manifest.toml  Project.toml  make.jl
paper/: header.tex  juliacon.cls  paper.aux  paper.bbl  paper.blg  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  paper.yml  ref.bib
src/: BALL.jl  BiochemicalAlgorithms.jl  deprecation.jl  peptide_builder.jl  precompile.jl
src/validation/ball_atomtyping_validation/: CMakeLists.txt  main.cpp
test/: aqua.jl  runtests.jl  test_PDB_atom.jl  test_amino_acid.jl  test_atom.jl  test_atomtypes_script.jl  test_atomtyping.jl  test_bond.jl  test_chain.jl  test_element.jl  test_fileformats.jl  test_fragment.jl  test_molecule.jl  test_nucleotide.jl  test_pdb_atom.jl  test_pdb_molecule.jl  test_peptide_builder.jl  test_protein.jl  test_residue.jl  test_substructure.jl  test_types.jl  validation_script.jl
tutorials/: .gitignore  01_QuickStart.qmd  02_CoreComponents.qmd  03_Iterate.qmd  04_ForceFields.qmd  05_HandleMolecules.qmd  Project.toml  System _representation.qmd  _quarto.yml  core_components.qmd  force_field_ops.qmd  getting_started.html  (+5 more)
(+926 files in other folders)
